<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PetHome</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="snackbar_action_ok">OK</string>
    <string name="snackbar_action_undo">UNDO</string>
    <string name="transition_name_animal_photo">StoreApp.animalPhoto</string>
    <string name="animal_config_title_add_animal">Add animal</string>
    <string name="animal_config_label_name">Name</string>
    <string name="animal_config_hint_description">Description</string>
    <string name="animal_config_label_category">Category</string>
    <string name="animal_config_label_attrs">Additional Attributes</string>
    <string name="animal_config_btn_label_add_more_attrs">Add more</string>
    <string name="animal_config_spinner_category_prompt">Select Category</string>
    <string name="animal_config_attr_hint_name">Name</string>
    <string name="animal_config_attr_hint_value">Value</string>
    <string name="animal_config_empty_fields_validation_error">
        All fields are required except for animal Attributes and Images.
        Please fill and then click on \'Save\'.
    </string>
    <string name="animal_config_attrs_partial_empty_fields_validation_error">
        Incomplete animal Attributes found.
        Please fill the missing details and then click on \'Save\'.
    </string>
    <string name="animal_config_attrs_name_conflict_error">
        
        Attribute Name \'<xliff:g example="Width" id="attr_name">%1$s</xliff:g>\' has been defined more than once. Remove the duplicate.
    </string>
    <string name="animal_config_no_animal_found_error">
        
        No animal Found for Item Id <xliff:g example="101" id="item_id">%1$d</xliff:g>
    </string>
    <string name="animal_config_category_null_error">
        
        NULL Id found for Category \'<xliff:g example="Sports" id="category_name">%1$s</xliff:g>\'. Data may be inconsistent.
    </string>
    <string name="animal_config_insert_category_error">
        
        Failed to insert Category for <xliff:g example="Sports" id="category_name">%1$s</xliff:g>
    </string>
    <string name="animal_config_insert_item_error">
        
        Failed to insert Item for <xliff:g example="Bat" id="item_name">%1$s</xliff:g>
    </string>
    <string name="animal_config_insert_item_addtnl_dtls_error">
        
        Failed to insert the Attributes and/or Images of Item
        \'<xliff:g example="Bat" id="item_name">%1$s</xliff:g>\'
        with Animal with petcode #<xliff:g example="A11223445" id="item_sku">%1$s</xliff:g>
    </string>
    <string name="animal_config_update_category_error">
        
        Animal with petcode #<xliff:g example="A11223445" id="item_sku">%1$s</xliff:g> Update: Failed to insert Category for <xliff:g example="Sports" id="category_name">%1$s</xliff:g>
    </string>
    <string name="animal_config_update_item_error">
        
        Animal with petcode #<xliff:g example="A11223445" id="item_sku">%1$s</xliff:g> Update: Failed to update Item data
    </string>
    <string name="animal_config_update_item_inconsistent_error">
        
        Animal with petcode #<xliff:g example="A11223445" id="item_sku">%1$s</xliff:g> Update: More than one record of Item was updated. Data may be inconsistent.
    </string>
    <string name="animal_config_update_item_addtnl_dtls_error">
        
        Animal with petcode #<xliff:g example="A11223445" id="item_sku">%1$s</xliff:g> Update: Failed to insert the Attributes and/or Images of Item.
    </string>
    <string name="animal_config_update_item_images_error">
        
        Animal with petcode #<xliff:g example="A11223445" id="item_sku">%1$s</xliff:g> Update: Failed to insert/erase the Images of Item.
    </string>
    <string name="animal_config_update_item_images_success">
        
        Animal with petcode #<xliff:g example="A11223445" id="item_sku">%1$s</xliff:g> Update: Image(s) of Item were successfully updated/erased.
    </string>
    <string name="animal_config_delete_item_error">
        
        Failed to delete the Item Id <xliff:g example="101" id="item_id">%1$d</xliff:g>
    </string>
    <string name="animal_config_delete_animal_confirm_dialog_message">Delete animal?</string>
    <string name="animal_config_sku_invalid_error">animal SKU needs to be Unique.\nTry a different one.</string>
    <string name="animal_config_sku_empty_error">animal SKU is a mandatory field.</string>
    <string name="animal_config_unsaved_changes_dialog_message">Unsaved changes found?</string>
    <string name="animal_config_unsaved_changes_dialog_positive_text">Save</string>
    <string name="animal_config_unsaved_changes_dialog_negative_text">Discard</string>
    <string name="animal_config_unsaved_changes_dialog_neutral_text">Keep Editing</string>
    <string name="animal_config_status_loading_existing_animal">Loading animal details…</string>
    <string name="animal_config_status_saving">Saving animal details…</string>
    <string name="animal_config_status_deleting">Deleting animal…</string>
    <string name="animal_image_title">animal Images</string>
    <string name="animal_image_save_error">Failed to save the image taken.</string>
    <string name="animal_image_disk_not_mounted_save_error">Cannot save any image when the external storage is unmounted. Disconnect from PC and try again.</string>
    <string name="animal_image_no_camera_hardware_error">Device does not have Camera hardware to take a picture.</string>
    <string name="animal_image_picker_chooser_title">Select Image(s) for the animal</string>
    <string name="animal_image_already_picked_message">One of the Image(s) picked is already present in the list</string>
    <string name="animal_image_action_select">Select</string>
    <string name="animal_image_contextual_action_delete_title">Delete images</string>
    <string name="animal_image_contextual_action_delete_live_count">
        
        <xliff:g example="10" id="image_count">%1$d</xliff:g> selected
    </string>
    <string name="animal_image_delete_error">Some image files could not be deleted. This will include the files NOT created by the app. Please delete them manually later.</string>
    <string name="animal_image_delete_success">Selected animal Images deleted successfully.</string>
    <string name="animal_image_unsaved_changes_dialog_message">Save selected image as Default?</string>
    <string name="animal_image_unsaved_changes_dialog_positive_text">Save</string>
    <string name="animal_image_unsaved_changes_dialog_negative_text">Ignore</string>
    <string name="animal_image_status_loading_picked_single">Loading Image picked…</string>
    <string name="animal_image_status_loading_picked_multiple">Loading Image(s) picked…</string>
    <string name="animal_image_status_saving_capture">Saving Image captured…</string>
    <string name="animal_image_status_deleting">Deleting Image(s)…</string>
    <string name="animal_image_empty_text">Tap the \"+\" button below to add the Images for the animal.</string>
    <string name="animal_image_picker_label_camera">Take\nPhoto</string>
    <string name="animal_image_picker_label_gallery">Pick from\nGallery</string>
    <string name="animal_image_picker_action_close">Close</string>
    <string name="animal_list_item_add_success">
        
        New animal with SKU #<xliff:g example="A11223445" id="item_sku">%1$s</xliff:g> added successfully.
    </string>
    <string name="animal_list_item_update_success">
        
        Animal with petcode #<xliff:g example="A11223445" id="item_sku">%1$s</xliff:g> updated successfully.
    </string>
    <string name="animal_list_item_delete_success">
        
        Animal with petcode #<xliff:g example="A11223445" id="item_sku">%1$s</xliff:g> deleted successfully.
    </string>
    <string name="animal_list_load_error">Error while loading animals.</string>
    <string name="rescuer_config_label_name">Name</string>
    <string name="rescuer_config_label_code">Code</string>
    <string name="rescuer_config_title_phone_section">Contact Details : Phone</string>
    <string name="rescuer_config_title_email_section">Contact Details : Email</string>
    <string name="rescuer_config_title_items_section">Rescued animals</string>
    <string name="rescuer_config_btn_label_add_phone">Add Phone</string>
    <string name="rescuer_config_btn_label_add_email">Add Email</string>
    <string name="rescuer_config_btn_label_add_item">Add Item</string>
    <string name="rescuer_config_title_add_rescuer">Add Rescuer</string>
    <string name="rescuer_config_item_contact_label_default">Default</string>
    <string name="rescuer_config_status_loading_existing_rescuer">Loading Rescuer details…</string>
    <string name="rescuer_config_code_invalid_error">The Code needs to be Unique.\nTry a different one.</string>
    <string name="rescuer_config_no_rescuer_found_error">
        
        No Rescuer Found for Rescuer Id <xliff:g example="101" id="rescuer_id">%1$d</xliff:g>
    </string>
    <string name="rescuer_config_code_empty_error">Rescuer Code is a mandatory field.</string>
    <string name="rescuer_config_item_contact_duplicate_error">Duplicate Contacts are not allowed.</string>
    <string name="rescuer_config_item_contact_hint_phone">Phone Number</string>
    <string name="rescuer_config_item_animal_label_price">
        

        " "
    </string>
    <string name="rescuer_config_status_saving">Saving Rescuer details…</string>
    <string name="rescuer_config_status_deleting">Deleting Rescuer…</string>
    <string name="rescuer_config_empty_fields_validation_error">
        No field can be left empty. Please fill and then click on \'Save\'.
    </string>
    <string name="rescuer_config_phone_contact_conflict_error">
        
        Contact Phone \'<xliff:g example="9898900001" id="phone_number">%1$s</xliff:g>\' has been defined more than once. Remove the duplicate.
    </string>
    <string name="rescuer_config_email_contact_conflict_error">
        
        Contact Email \'<xliff:g example="xyz@rescuer.com" id="email_id">%1$s</xliff:g>\' has been defined more than once. Remove the duplicate.
    </string>
    <string name="rescuer_config_empty_contacts_error">No Contacts found for the Rescuer. Minimum one Contact needs to be configured.</string>
    <string name="rescuer_config_phone_contacts_invalid_error">Some Phone Contacts are still invalid. Please correct and then click save.</string>
    <string name="rescuer_config_email_contacts_invalid_error">Some Email Contacts are still invalid. Please correct and then click save.</string>
    <string name="rescuer_config_insert_rescuer_error">
        
        Failed to insert Rescuer record for <xliff:g example="Frontline Inc." id="rescuer_name">%1$s</xliff:g>
    </string>
    <string name="adoptions_list_item_total_available">
        
        Total Available Quantity : &lt;b&gt;<xliff:g example="22" id="quantity">%1$d</xliff:g>&lt;/b&gt;
    </string>
    <string name="adoptions_list_item_rescuer_name_code_format">
        
        <xliff:g example="Frontline Inc." id="rescuer_name">%1$s</xliff:g> (<xliff:g example="126227" id="rescuer_code">%2$s</xliff:g>)
    </string>
    <string name="adoptions_list_item_rescuer_rescuing_price">
        

        ""
    </string>
    <string name="adoptions_list_item_top_rescuer_title">Top Rescuer</string>
    <string name="adoptions_list_item_action_delete_animal">Delete</string>
    <string name="adoptions_list_item_action_sell">Give Adoption 1</string>
    <string name="adoptions_list_item_out_of_stock">No rescue</string>
    <string name="adoptions_list_item_label_available">available</string>
    <string name="adoptions_config_item_rescuer_rescuing_price">"Rescued More?"
        

    </string>
</resources>