<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseCardLightStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground">

        <include
            android:id="@+id/include_all_animal_item"
            style="@style/ConstraintTopCenterHorizontalStyle"
            layout="@layout/layout_all_animal_item" />

        <View
            android:id="@+id/divider_adoptions_list_item_section_1"
            style="@style/AdoptionsListItemDividerStyle"
            app:layout_constraintTop_toBottomOf="@+id/include_all_animal_item" />

        <TextView
            android:id="@+id/text_adoptions_list_item_total_available"
            style="@style/ConstraintCenterHorizontalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/adoptions_list_item_vertical_margin"
            android:gravity="center"
            android:textColor="@color/adoptionsListItemTotalAvailableColor"
            android:textSize="@dimen/text_adoptions_list_item_total_available_size"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/divider_adoptions_list_item_section_1"
            tools:text="@string/adoptions_list_item_total_available" />

        <View
            android:id="@+id/divider_adoptions_list_item_section_2"
            style="@style/AdoptionsListItemDividerStyle"
            android:layout_marginTop="@dimen/adoptions_list_item_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_adoptions_list_item_total_available" />

        <TextView
            android:id="@+id/text_adoptions_list_item_top_rescuer_title"
            style="@style/ConstraintCenterHorizontalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/adoptions_list_item_vertical_margin"
            android:drawableLeft="@drawable/ic_main_tab_rescuer_default"
            android:drawablePadding="@dimen/adoptions_list_item_top_rescuer_title_drawable_padding"
            android:drawableStart="@drawable/ic_main_tab_rescuer_default"
            android:text="@string/adoptions_list_item_top_rescuer_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/divider_adoptions_list_item_section_2" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_adoptions_list_item_center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/text_adoptions_list_item_rescuer_name_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_adoptions_list_item_rescuer_name_code_margin"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_adoptions_list_item_rescuer_name_code_size"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/guideline_adoptions_list_item_center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_adoptions_list_item_center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_adoptions_list_item_top_rescuer_title"
            tools:text="@string/adoptions_list_item_rescuer_name_code_format" />

        <TextView
            android:id="@+id/text_adoptions_list_item_rescuer_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/adoptions_list_item_vertical_margin"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="italic"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/text_adoptions_list_item_available_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline_adoptions_list_item_center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_adoptions_list_item_center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_adoptions_list_item_rescuer_name_code"
            tools:text="@string/adoptions_list_item_rescuer_rescuing_price" />

        <TextView
            android:id="@+id/text_adoptions_list_item_rescuer_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_adoptions_list_item_rescuer_availability_margin"
            android:gravity="center"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/adoptionsListItemRescuerAvailabilityColor"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/guideline_adoptions_list_item_center_vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline_adoptions_list_item_center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/text_adoptions_list_item_top_rescuer_title"
            tools:text="88" />

        <TextView
            android:id="@+id/text_adoptions_list_item_available_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adoptions_list_item_label_available"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="@+id/text_adoptions_list_item_rescuer_availability"
            app:layout_constraintLeft_toLeftOf="@+id/text_adoptions_list_item_rescuer_availability"
            app:layout_constraintRight_toRightOf="@+id/text_adoptions_list_item_rescuer_availability"
            app:layout_constraintStart_toStartOf="@+id/text_adoptions_list_item_rescuer_availability"
            app:layout_constraintTop_toBottomOf="@+id/text_adoptions_list_item_rescuer_availability" />

        <View
            android:id="@+id/divider_adoptions_list_item_action_buttons"
            style="@style/AdoptionsListItemDividerStyle"
            android:layout_marginTop="@dimen/adoptions_list_item_action_buttons_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_adoptions_list_item_available_label" />

        <Button
            android:id="@+id/btn_adoptions_list_item_delete"
            style="@style/MaterialLabelButtonStyle"
            android:layout_marginTop="@dimen/adoptions_list_item_action_buttons_vertical_margin"
            android:drawableLeft="@drawable/ic_adoptions_list_item_delete"
            android:drawablePadding="@dimen/adoptions_list_item_action_buttons_drawable_padding"
            android:drawableStart="@drawable/ic_adoptions_list_item_delete"
            android:text="@string/adoptions_list_item_action_delete_animal"
            android:textColor="@color/adoptionsListItemButtonLabelDeleteColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_adoptions_list_item_action_buttons" />

        <Button
            android:id="@+id/btn_adoptions_list_item_sell"
            style="@style/MaterialLabelButtonStyle"
            android:layout_marginLeft="@dimen/adoptions_list_item_action_buttons_horizontal_margin"
            android:layout_marginStart="@dimen/adoptions_list_item_action_buttons_horizontal_margin"
            android:layout_marginTop="@dimen/adoptions_list_item_action_buttons_vertical_margin"
            android:drawableLeft="@drawable/ic_adoptions_list_item_ship"
            android:drawablePadding="@dimen/adoptions_list_item_action_buttons_drawable_padding"
            android:drawableStart="@drawable/ic_adoptions_list_item_ship"
            android:text="@string/adoptions_list_item_action_sell"
            android:textColor="@color/adoptionsListItemButtonLabelSellColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btn_adoptions_list_item_delete"
            app:layout_constraintStart_toEndOf="@+id/btn_adoptions_list_item_delete"
            app:layout_constraintTop_toBottomOf="@+id/divider_adoptions_list_item_action_buttons" />

        <android.support.constraint.Group
            android:id="@+id/group_adoptions_list_item_top_rescuer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="text_adoptions_list_item_top_rescuer_title, text_adoptions_list_item_rescuer_name_code, text_adoptions_list_item_rescuer_availability, text_adoptions_list_item_available_label, text_adoptions_list_item_rescuer_price, divider_adoptions_list_item_section_2, btn_adoptions_list_item_sell" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>