<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseCardLightStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_adoptions_config_item_rescuer_name_code"
            style="@style/ConstraintTopCenterHorizontalStyle"
            android:layout_width="@dimen/match_constraint_0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_adoptions_config_item_rescuer_name_code_margin_left"
            android:layout_marginStart="@dimen/text_adoptions_config_item_rescuer_name_code_margin_left"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constrainedWidth="true"
            tools:text="@string/adoptions_list_item_rescuer_name_code_format" />

        <TextView
            android:id="@+id/text_adoptions_config_item_rescuer_rescuing_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_adoptions_config_item_rescuer_rescuing_price_margin_top"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="@+id/text_adoptions_config_item_rescuer_name_code"
            app:layout_constraintStart_toStartOf="@+id/text_adoptions_config_item_rescuer_name_code"
            app:layout_constraintTop_toBottomOf="@+id/text_adoptions_config_item_rescuer_name_code"
            tools:text="@string/adoptions_config_item_rescuer_rescuing_price" />

        <EditText
            android:id="@+id/edittext_adoptions_config_item_rescuer_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/edittext_adoptions_config_item_rescuer_qty_horizontal_margin"
            android:layout_marginLeft="@dimen/edittext_adoptions_config_item_rescuer_qty_horizontal_margin"
            android:layout_marginRight="@dimen/edittext_adoptions_config_item_rescuer_qty_horizontal_margin"
            android:layout_marginStart="@dimen/edittext_adoptions_config_item_rescuer_qty_horizontal_margin"
            android:layout_marginTop="@dimen/adoptions_config_vertical_margin"
            android:background="@drawable/shape_adoptions_config_item_rescuer_qty_edit_box"
            android:ems="5"
            android:inputType="number"
            android:theme="@style/AdoptionsConfigTextInputTheme"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/imgbtn_adoptions_config_item_rescuer_increase_qty"
            app:layout_constraintLeft_toRightOf="@+id/imgbtn_adoptions_config_item_rescuer_decrease_qty"
            app:layout_constraintRight_toLeftOf="@+id/imgbtn_adoptions_config_item_rescuer_increase_qty"
            app:layout_constraintStart_toEndOf="@+id/imgbtn_adoptions_config_item_rescuer_decrease_qty"
            app:layout_constraintTop_toBottomOf="@+id/text_adoptions_config_item_rescuer_rescuing_price" />

        <ImageButton
            android:id="@+id/imgbtn_adoptions_config_item_rescuer_increase_qty"
            android:layout_width="@dimen/btn_material_size"
            android:layout_height="@dimen/btn_material_size"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/state_adoptions_config_increase_qty"
            app:layout_constraintBottom_toBottomOf="@+id/edittext_adoptions_config_item_rescuer_qty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/edittext_adoptions_config_item_rescuer_qty"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edittext_adoptions_config_item_rescuer_qty"
            app:layout_constraintTop_toTopOf="@+id/edittext_adoptions_config_item_rescuer_qty" />

        <ImageButton
            android:id="@+id/imgbtn_adoptions_config_item_rescuer_decrease_qty"
            android:layout_width="@dimen/btn_material_size"
            android:layout_height="@dimen/btn_material_size"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/state_adoptions_config_decrease_qty"
            app:layout_constraintBottom_toBottomOf="@+id/edittext_adoptions_config_item_rescuer_qty"
            app:layout_constraintEnd_toStartOf="@+id/edittext_adoptions_config_item_rescuer_qty"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/edittext_adoptions_config_item_rescuer_qty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edittext_adoptions_config_item_rescuer_qty" />

        <TextView
            android:id="@+id/text_adoptions_config_item_rescuer_out_of_stock_alert"
            style="@style/ConstraintCenterHorizontalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/adoptions_config_same_section_vertical_margin"
            android:gravity="center"
            android:text="@string/adoptions_list_item_out_of_stock"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/adoptionsListItemOutOfStockColor"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/imgbtn_adoptions_config_item_rescuer_decrease_qty" />

        <View
            android:id="@+id/divider_adoptions_config_item_rescuer_action_buttons"
            style="@style/AdoptionsListItemDividerStyle"
            android:layout_marginTop="@dimen/adoptions_config_same_section_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_adoptions_config_item_rescuer_out_of_stock_alert" />

        <Button
            android:id="@+id/btn_adoptions_config_item_rescuer_edit"
            style="@style/MaterialLabelButtonStyle"
            android:layout_marginTop="@dimen/adoptions_config_item_rescuer_action_buttons_vertical_margin"
            android:text="@string/action_edit"
            android:textColor="@color/adoptionsConfigItemRescuerButtonLabelEditColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_adoptions_config_item_rescuer_action_buttons" />

<!--        <Button-->
<!--            android:id="@+id/btn_adoptions_config_item_rescuer_procure"-->
<!--            style="@style/MaterialLabelButtonStyle"-->
<!--            android:layout_marginLeft="@dimen/adoptions_config_item_rescuer_action_buttons_horizontal_margin"-->
<!--            android:layout_marginStart="@dimen/adoptions_config_item_rescuer_action_buttons_horizontal_margin"-->
<!--            android:layout_marginTop="@dimen/adoptions_config_item_rescuer_action_buttons_vertical_margin"-->
<!--            android:drawableLeft="@drawable/ic_adoptions_config_item_rescuer_procure"-->
<!--            android:drawablePadding="@dimen/adoptions_config_item_action_buttons_drawable_padding"-->
<!--            android:drawableStart="@drawable/ic_adoptions_config_item_rescuer_procure"-->
<!--            android:text="@string/adoptions_config_item_rescuer_action_procure"-->
<!--            android:textColor="@color/adoptionsConfigItemRescuerButtonLabelProcureColor"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintLeft_toRightOf="@+id/btn_adoptions_config_item_rescuer_edit"-->
<!--            app:layout_constraintStart_toEndOf="@+id/btn_adoptions_config_item_rescuer_edit"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/divider_adoptions_config_item_rescuer_action_buttons" />-->

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>